syntax = "proto3";

package foundation;

option go_package = "proto/pb;pb";

service FoundationService {
    rpc PrepareFoundation (PrepareFoundationRequest) returns (PrepareFoundationResponse);
    rpc CommitFoundation (CommitFoundationRequest) returns (CommitFoundationResponse);
    rpc RollbackFoundation (RollbackFoundationRequest) returns (RollbackFoundationResponse);
    rpc GetOrderByID (OrderID) returns (GetOrderByIDResponse);
    rpc PrepareAddOrderQuantity (PrepareAddOrderQuantityRequest) returns (PrepareAddOrderQuantityResponse);
    rpc CommitAddOrderQuantity (CommitAddOrderQuantityRequest) returns (CommitAddOrderQuantityResponse);
    rpc RollbackAddOrderQuantity (RollbackAddOrderQuantityRequest) returns (RollbackAddOrderQuantityResponse);
}

message PrepareFoundationRequest {
    string user_id = 1;
    string email = 2;
    string name = 3;
    string address = 4;
}

message PrepareFoundationResponse {
    bool success = 1;
    string message = 2;
}

message CommitFoundationRequest {
    string user_id = 1;
}

message CommitFoundationResponse {
    bool success = 1;
    string message = 2;
}

message RollbackFoundationRequest{
    string user_id = 1;
}

message RollbackFoundationResponse {
    bool success = 1;
    string message = 2;
}

message OrderID {
    string id = 1;
}

message GetOrderByIDResponse {
    string id = 1;
    string order_list_id = 2;
	string meals_id = 3;
	uint32 quantity = 4;
	uint32 desired_quantity = 5;
}

message PrepareAddOrderQuantityRequest {
    string donation_id = 1;
    string order_id = 2;
    uint32 quantity = 3;
}

message PrepareAddOrderQuantityResponse {
    bool success = 1;
    string message = 2;
}

message CommitAddOrderQuantityRequest {
    string donation_id = 1;
}

message CommitAddOrderQuantityResponse {
    bool success = 1;
    string message = 2;
}

message RollbackAddOrderQuantityRequest {
    string donation_id = 1;
}

message RollbackAddOrderQuantityResponse {
    bool success = 1;
    string message = 2;
}